fixed text alignment on logout page

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@ header h1 {
   vertical-align: middle;
 }
 
+p {
+  text-align: center;
+}
+
 .fa {
   font-size: 22px;
   transform: translateY(50deg);
@@ -40,6 +44,8 @@ header i {
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .add-item {
